Stylezing select element

--- a/index.html
+++ b/index.html
@@ -54,6 +54,53 @@
                             Cart
                         </span>
                     </a>
+                        <div class="popover popover-cart">
+                            <button class="popover-close-button button button-light">
+                                2<span class="visually-hidden">Close</span>
+                            </button>
+                        
+                        <div class="popover-content">
+                            <h2 class="popover-title">Cart</h2>
+                            <ul class="cart-item-list">
+                                <li class="cart-item">
+                                    <p class="cart-item-title">Neet HairCut</p>
+                                    <p class="cart-item-price">10$</p>
+                                    <button type="button" class="button cart-item-remove">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#a)">
+                                              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.42 1 3.7.5 4 0H12l.29.5.28.5h3.05l-.14 1.12-1.57 13-.11.88H2.19l-.1-.88-1.58-13L.37 1h3.05Zm.54 13L2.63 3h10.74l-1.33 11H3.96ZM9 4.93l-.5 7 2 .14.5-7-2-.14Zm-3.5 7.14-.5-7 2-.14.5 7-2 .14Z" />
+                                            </g>
+                                            <defs>
+                                              <clipPath id="a">
+                                                <path fill="#fff" d="M0 0h16v16H0z"/>
+                                              </clipPath>
+                                            </defs>
+                                          </svg>
+                                          <span class="visually-hidden">Remove from Cart</span>
+
+                                    </button>
+                                </li>
+                                <li class="cart-item">
+                                    <p class="cart-item-title">Mustache coloring </p>
+                                    <p class="cart-item-price">15$</p>
+                                    <button type="button" class="button cart-item-remove">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#a)">
+                                              <path fill-rule="evenodd" clip-rule="evenodd" d="M3.42 1 3.7.5 4 0H12l.29.5.28.5h3.05l-.14 1.12-1.57 13-.11.88H2.19l-.1-.88-1.58-13L.37 1h3.05Zm.54 13L2.63 3h10.74l-1.33 11H3.96ZM9 4.93l-.5 7 2 .14.5-7-2-.14Zm-3.5 7.14-.5-7 2-.14.5 7-2 .14Z" />
+                                            </g>
+                                            <defs>
+                                              <clipPath id="a">
+                                                <path fill="#fff" d="M0 0h16v16H0z"/>
+                                              </clipPath>
+                                            </defs>
+                                          </svg>
+                                          <span class="visually-hidden">Remove from Cart</span>
+
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="navigation-item">
                     <a class="navigation-link navigation-link-login" href="#">
@@ -122,18 +169,22 @@
                     <a class="button button-all" href="#">See All</a>
                 </section>
                 <section class="gallery">
-                    <h2>Gallery</h2>
-                    <img class="slider-image" src="img/products/gallery-1.jpg" width="390" height="250">
-                    <button class="slider-button slider-prev" type="button">
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="slider-button slider-next" type="button">
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <h2 class="gallery-title">Gallery</h2>
+                    <div class="slider">
+                        <img class="slider-image" src="img/products/gallery-1.jpg" width="390" height="250">
+                        <div class="slider-buttons">
+                            <button class="slider-button slider-prev" type="button">
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="slider-button slider-next" type="button">
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
 
                     <ol class="slider-pagination">
                         <li class="slider-pagination-item">
-                            <button class="slider-pagination-button" type="button">
+                            <button class="slider-pagination-button slider-pagination-current" type="button">
                                 <span class="visually-hidden">1 Photo</span>
                             </button>
                         </li>
@@ -181,20 +232,34 @@
                     <p class="appointment-description">Please choose desired date and time after which we will call you and confirm your your request.</p>
                     <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
                         <p class="field-group appointment-form-date">
-                            <label for="appointment-date">Date</label>
-                            <input type="text" id="appointment-date" name="appointment-date" placeholder="12.08.2022">
+                            <span class="form-label form-label-icon">
+                                <label for="appointment-date">Date</label>
+                                <button class="info" type="button">
+                                    <span class="visually-hidden">See additional information</span>
+                                </button>
+                             </span>
+                            <input class="field" type="text" id="appointment-date" name="appointment-date" placeholder="12.08.2022">
                         </p>
                         <p class="field-group appointment-form-time">
-                            <label for="appointment-time">Time</label>
-                            <input type="text" id="appointment-time" name="appointment-time" placeholder="10:00">
+                            <span class="form-label form-label icon">
+                                <label for="appointment-time">Time</label>
+                                <button class="info" type="button">
+                                    <span class="visually-hidden">See additional information</span>
+                                </button>
+                             </span>
+                            <input class="field"  type="text" id="appointment-time" name="appointment-time" placeholder="10:00">
                         </p>
                         <p class="field-group appointment-form-phone">
-                            <label for="appointment-phone">Phone</label>
-                            <input type="text" name="appointment-phone" placeholder="+995 555 555 555">
+                            <span class="form-label">
+                                <label for="appointment-phone">Phone</label>
+                            </span>
+                            <input class="field" type="text" name="appointment-phone" placeholder="+995 555 555 555">
                         </p>
                         <p class="field-group appointment-form-name">
-                            <label for="appointment-name">Name</label>
-                            <input type="text" name="appointment-name" placeholder="John Doe">
+                            <span class="form-label">
+                                <label for="appointment-name">Name</label>
+                            </span>
+                            <input class="field" type="text" name="appointment-name" placeholder="John Doe">
                         </p>
                         <button class="button button-submit" type="submit">Book</button>
                     </form>
@@ -255,5 +320,39 @@
             </section>
         </div>
     </footer>
+
+    <div class="modal-container modal-container-close">
+        <div class="modal modal-auth">
+            <button class="modal-close-button">
+                <span class="visually-hidden">Close</span>
+            </button>
+            <section class="modal-content">
+                <h2 class="modal-title">Personal Cabinet</h2>
+                <form class="auth-form" action="https://echo.htmlacademy.ru" method="post">
+                    <p class="field-group">
+                        <label class="visually-hidden" for="auth-login">Login</label>
+                        <input class=" field" type="text" id="auth-login" name="auth-login" placeholder="Login">
+                    </p>
+                    <p class="field-group">
+                        <label class="visually-hidden" for="auth-password">Password</label>
+                        <input class="field" type="text" id="auth-password" name="auth-password" placeholder="Password">
+                    </p>
+                    <p class="field-group auth-form-user-options">
+                        <label class="control auth-form-checkbox-control">
+                            <input class="visually-hidden control-input" type="checkbox" name="firm-store">
+                            <span class="control-mark"></span>
+                            <span class="control-label">Remember me</span>
+                        </label>
+                        <a class="auth-form-recovery" href="#">
+                            Lost Password?
+                        </a>
+                    </p>
+                    <button class="button auth-form-button" type="submit">Login</button> 
+                    <a class="button auth-form-register" href="#">Register</a>
+                </form>
+            </section>
+        </div>
+         
+    </div>
 </body>
 </html>
